# aoe2-probe

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
benches/: parsing.rs
examples/: append_trigger.rs  encode.rs  playground.rs  print_all.rs  print_info.rs  read_write.rs  scenorio.rs  serde_json.rs  serialize.rs  structure_check.rs  template.rs  triggers.rs  type_check.rs  update_attr.rs
resources/: chapter_1.aoe2scenario  chapter_3.aoe2scenario  chapter_4.aoe2scenario  temp.aoe2scenario
src/: data.rs  generator.rs  lib.rs  scenario.rs  scenorio.rs  serializer.rs
src/element/: basic.rs  builder.rs  mod.rs  serde.rs  versio.rs  wrap.rs
src/io/: source.rs
src/parse/: builder.rs  censor.rs  code.rs  mod.rs  serde.rs  token.rs  wrap.rs
src/platform/: mod.rs
src/prebuilt/: changlog.md  mod.rs
src/prebuilt/config/: condition.rs  effect.rs  mod.rs  object_attr.rs
src/prebuilt/ver1_46/: ai.rs  ai2.rs  background.rs  bitmap_info.rs  cinematics.rs  condition.rs  data_header.rs  diplomacy.rs  effect.rs  file_header.rs  files.rs  global_victory.rs  map.rs  message.rs  mod.rs  options.rs  player_data_four.rs  player_data_one.rs  player_data_three.rs  player_data_two.rs  player_diplomacy.rs  player_units.rs  resource.rs  terrain.rs  trigger.rs  triggers.rs  unit.rs  units.rs  variable.rs  versio.rs
src/prebuilt/ver1_47/: ai.rs  ai2.rs  background.rs  bitmap_info.rs  file_header.rs  map.rs  message.rs  mod.rs  options.rs  player_data_two.rs  player_diplomacy.rs  terrain.rs  triggers.rs  versio.rs
src/prebuilt/ver1_48/: global_victory.rs  player_data_four.rs  player_data_one.rs  terrain.rs  triggers.rs  variable.rs  versio.rs
src/prebuilt/ver1_49/: options.rs  player_units.rs  trigger.rs  units.rs  versio.rs
src/prebuilt/ver1_51/: cinematics.rs  data_header.rs  effect.rs  files.rs  map.rs
src/prebuilt/ver1_53/: condition.rs  diplomacy.rs  player_data_three.rs  resource.rs  unit.rs
src/proxy/: mod.rs  triggers.rs
src/tweak/: attr.rs  condition.rs  effect.rs  mod.rs  trigger.rs  triggers.rs  triggers_tweak.rs
src/utils/: map.rs  mod.rs  string.rs
src/versio/: mod.rs  ver1_46.rs
