[package]
name = "aoe2-probe"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A rust library for editing aoe2scenario files from AoE2 DE."
homepage = "https://github.com/ptazithos/aoe2-probe"
repository = "https://github.com/ptazithos/aoe2-probe"
readme = "README.md"
keywords = ["gamedev", "AoE2DE", "parser"]
categories = ["game-development", "parsing"]

exclude = ["resources", "examples", ".circleci"]

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
log = "0.4.20"
miniz_oxide = "0.7.1"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
lazy_static = "1.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
serde_repr = "0.1.16"


[dev-dependencies]
env_logger = "0.10.0"


[[example]]
name = "read_write"
path = "examples/read_write.rs"

[[example]]
name = "encode"
path = "examples/encode.rs"

[[example]]
name = "template"
path = "examples/template.rs"

[[example]]
name = "print_info"
path = "examples/print_info.rs"

[[example]]
name = "update_attr"
path = "examples/update_attr.rs"

[[example]]
name = "type_check"
path = "examples/type_check.rs"

[[example]]
name = "structure_check"
path = "examples/structure_check.rs"

[[example]]
name = "serde_json"
path = "examples/serde_json.rs"

[[example]]
name = "triggers"
path = "examples/triggers.rs"
